ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falgi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.falgifaisal.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: falgi-service
                port:
                  number: 80
